# Parallel-Algorithms-MIS

./: .gitignore  CMakeLists.txt  run.sh
input/: 1.in  2.in  3.in  input1.txt  input2.txt  input3.txt  input4.txt
src/checker/: checker.cpp  checker.h
src/main/: main.cpp
src/parser/: parser.cpp  parser.h
src/solver/: solver.cpp  solver.h
test_gen/: test_gen.py
